2011-12-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/estado_agente.php: Added filter by summarized 
	agent state.
	
	Pending task: #3389947

2011-12-07  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php: Added two new functions 
	to external API: set_enable_module_alerts and 
	set_disable_module_alerts for feature request 3427673

2011-12-07 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/events/events_list.php
	operation/events/events.php: Added filter to hide/show alert events 
	in this view.
	
	Pending task: #3406323

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/agentes/status_monitor.php: Added sort funcionality
	and resize module value feature for string module data types.

	Pending task: #3425266

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/help/en/help_custom_logo.php
	include/help/es/help_custom_logo.php: Changed height and width in 
	this help view.
	
	Fixes: #3450145

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/setup/os.php: List all OS is the page by defect.
	
	Fixes: #3450147

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_conf_gis.php
      godmode/gis_maps/configure_gis_map.php: Changed order of latitude,
      longitude and altitude in Gis maps information.
      
      Fixes: #3450292

2011-12-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions.php
	extensions/snmp_explorer.php
	godmode/agentes/configurar_agente.php
	godmode/massive/massive_edit_modules.php: Check if a module 
	name exists in the agent when you edit the module and
	improve the errors feedback

2011-12-02  Sergio Martin <sergio.martin@artica.es>

	* include/functions_modules.php
	include/functions_api.php
	include/functions.php
	extensions/snmp_explorer.php
	godmode/agentes/module_manager_editor_common.php
	godmode/agentes/configurar_agente.php: limited the 